--- a/VitorAlexandrino.ipynb
+++ b/VitorAlexandrino.ipynb
@@ -1445,7 +1445,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dá pra ver que, por causa de alguns aplicativos com preços e downloads fora do normal, fica difícil a extração de uma informação útil. Vou retirar esses valores irregulares e plotar novamente."
+    "### Dá pra ver que, por causa de alguns aplicativos com preços e downloads fora do normal (outliers), fica difícil a extração de uma informação útil. Vou retirar esses valores irregulares e plotar novamente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2- Qual a categoria de aplicativo mais lucrativa?\n",
+    "#### 1. Aqui eu fiz uma análise simples da quantidade de downloads de cada categoria pelo preço.\n",
+    "#### 2. Lógico que desconsiderei a qualidade do aplicativo, fator que influenciaria em uma análise mais criteriosa."
    ]
   },
   {
@@ -1453,7 +1462,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#fazer um gráfico de y= (quantidade de Downloads x preço) por x= (categoria)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pagos = df\n",
+    "#print(type(df_pagos.Price[10])) # imprimi para ver o formato\n",
+    "df_pagos['Price'] = pd.to_numeric(df_pagos['Price'])\n",
+    "df_pagos['Installs'] = pd.to_numeric(df_pagos['Installs'])\n",
+    "#print(type(df_pagos.Price[10])) # imprimi para confirmar o formato\n",
+    "df_pagos = df_pagos.loc[(df['Price']>0)]\n",
+    "\n",
+    "df_pagos['Preço X Downloads'] = df_pagos[\"Price\"].mul(df_pagos['Installs'])\n",
+    "\n",
+    "df_pagos.plot(kind='scatter',x='Price',y='Preço X Downloads',color='red')\n",
+    "plt.show()\n",
+    "\n",
+    "#print('Número de aplicativos pagos', len(df_pagos))\n",
+    "#df_pagos.sample(100)"
+   ]
   }
  ],
  "metadata": {
